--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   photo_manager: ^2.5.2
+  image_picker: ^0.8.7+5
   oktoast: ^3.1.0
   path_provider: ^2.0.5
 
